// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot test (fixed) 1`] = `
<DocumentFragment>
  .c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  height: 40px;
  padding: 10px 20px 10px 10px;
  border-bottom: 1px solid #D4D8DD;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: auto;
}

<div
    class="c0"
  >
    <header
      class="c1"
    >
      <div
        class="c2"
      >
        <div>
          left
        </div>
      </div>
      <div
        class="c3"
      >
        <div>
          right
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Header snapshot test 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  height: 40px;
  padding: 10px 20px 10px 10px;
  border-bottom: 1px solid #D4D8DD;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: auto;
}

<header
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        left
      </div>
    </div>
    <div
      class="c2"
    >
      <div>
        right
      </div>
    </div>
  </header>
</DocumentFragment>
`;
